@@ -3,8 +3,6 @@ package org.fugerit.java.doc.playground.meta;
 import java.util.Properties;
 
 import org.fugerit.java.core.util.PropsIO;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.ws.rs.GET;
@@ -12,13 +10,13 @@ import jakarta.ws.rs.Path;
 import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
+import lombok.extern.slf4j.Slf4j;
 
+@Slf4j
 @ApplicationScoped
 @Path("/meta")
 public class MetaRest {
 
-	private final static Logger logger = LoggerFactory.getLogger(MetaRest.class);
-	
 	@GET
 	@Produces(MediaType.APPLICATION_JSON)
 	@Path("/version")
@@ -28,7 +26,7 @@ public class MetaRest {
 			Properties buildProps = PropsIO.loadFromClassLoader( "build.properties" );
 			res = Response.ok().entity( buildProps ).build();
 		} catch (Exception e) {
-			logger.info("Error : " + e, e);
+			log.info("Error : " + e, e);
 			res = Response.status(Response.Status.INTERNAL_SERVER_ERROR).build();
 		}
 		return res;
